@@ -16,6 +16,7 @@ Deprecated
 Features added
 --------------
 
+* #8818: autodoc: Super class having ``Any`` arguments causes nit-picky warning
 * #8127: py domain: Ellipsis in info-field-list causes nit-picky warning
 * #9023: More CSS classes on domain descriptions, see :ref:`nodes` for details.
 
